--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,15 +28,15 @@
       </div>
     </div>
     <div class="section-header-content">
-      <div class="section-header-wrapper">
-        <div class="section-header-wrapper-left">
+      <div class="section-header-wrapper ">
+        <div class="section-header-wrapper-left ">
           <div class="section-header-wrapper-left-title">welcome to our landing page</div>
           <div class="section-header-wrapper-left-text">Try out our awesome mobile application</div>
           <div class="section-header-wrapper-left-button">
             <button>download the app</button>
           </div>
         </div>
-        <div class="section-header-wrapper-right">
+        <div class="section-header-wrapper-right ">
           <div class="section-header-wrapper-right-img">
             <img src="../assets/img/New Project.png" alt="">
           </div>
@@ -84,7 +84,7 @@
 <!-- section outstanding -->
 <section class="section-outer ">
   <div class="section-inner section-outstanding">
-    <div class="section-outstanding-left">
+    <div class="section-outstanding-left ">
       <div class="section-outstanding-left-content">
         <div class="section-outstanding-left-content-header">landing page</div>
         <div class="section-outstanding-left-content-title">welcome to our landing page</div>
@@ -249,10 +249,11 @@
 
         </div>
       </div>
-      <div class="section-footer-content-two">
+      <!-- <div class="section-footer-content-two">
         <div class="section-footer-content-two-logo">
           <img src="../assets/img/wave.svg" alt="">
-          wavy</div>
+          wavy
+        </div>
         <div class="section-footer-content-two-copyright">Copyright 2021 Wave App.
           All right reserved.
         </div>
@@ -262,7 +263,7 @@
           <div class="section-footer-content-two-social-item">t</div>
           <div class="section-footer-content-two-social-item">i</div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
