response sm md lg

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,11 @@
 <!-- header -->
-<section class="section-outer section-header">
-  <div class="section-inner">
-    <div class="section-header-toolbar">
-      <div class="section-header-logo">
-        <img src="../assets/img/wave.svg" alt="">
+<section class="section-outer section-header ">
+  <div class="section-inner ">
+    <div class="section-header-toolbar row m-auto">
+      <div class="section-header-logo col-lg-2">
         wavy
       </div>
-      <div class="section-header-menu">
+      <div class="section-header-menu d-none d-lg-flex col-lg-10 ">
         <div class="section-header-menu-item">
           <a href="#">the product</a>
         </div>
@@ -27,16 +26,16 @@
         </div>
       </div>
     </div>
-    <div class="section-header-content">
-      <div class="section-header-wrapper ">
-        <div class="section-header-wrapper-left ">
+    <div class="section-header-content m-auto">
+      <div class="section-header-wrapper row ">
+        <div class="section-header-wrapper-left col-sm-12 col-md-6 col-lg-8">
           <div class="section-header-wrapper-left-title">welcome to our landing page</div>
           <div class="section-header-wrapper-left-text">Try out our awesome mobile application</div>
           <div class="section-header-wrapper-left-button">
             <button>download the app</button>
           </div>
         </div>
-        <div class="section-header-wrapper-right ">
+        <div class="section-header-wrapper-right col-sm-12 col-md-6 col-lg-4">
           <div class="section-header-wrapper-right-img">
             <img src="../assets/img/New Project.png" alt="">
           </div>
@@ -61,17 +60,17 @@
         quasi,
         at sapiente. Tempnt tenetur eveniet at molestias voluptatibus cumque delectus. Pariatur, maiores
         provident modi iste ut cum suscipit magnam nam. Reprehenderit, velit totam!</div>
-      <div class="section-welcome-content-logo">
-        <div class="section-welcome-logo-item">
+      <div class="section-welcome-content-logo row">
+        <div class="section-welcome-logo-item col-sm-12 col-md-6 col-lg-3">
           <img src="../assets/img/logo/5cb480b85f1b6d3fbadece78.png" alt="">
         </div>
-        <div class="section-welcome-logo-item">
+        <div class="section-welcome-logo-item col-sm-12 col-md-6 col-lg-3">
           <img src="../assets/img/logo/133-1337485_icon-spotify-spotify-logo-png-white.png.crdownload" alt="">
         </div>
-        <div class="section-welcome-logo-item">
+        <div class="section-welcome-logo-item col-sm-12 col-md-6 col-lg-3">
           <img src="../assets/img/logo/adobe-logo-transparent-background.png" alt="">
         </div>
-        <div class="section-welcome-logo-item">
+        <div class="section-welcome-logo-item col-sm-12 col-md-6 col-lg-3">
           <img src="../assets/img/logo/google.png.crdownload" alt="">
         </div>
       </div>
@@ -83,8 +82,8 @@
 
 <!-- section outstanding -->
 <section class="section-outer ">
-  <div class="section-inner section-outstanding">
-    <div class="section-outstanding-left ">
+  <div class="section-inner section-outstanding row">
+    <div class="section-outstanding-left col-sm-12 col-lg-4">
       <div class="section-outstanding-left-content">
         <div class="section-outstanding-left-content-header">landing page</div>
         <div class="section-outstanding-left-content-title">welcome to our landing page</div>
@@ -94,7 +93,7 @@
         </div>
       </div>
     </div>
-    <div class="section-outstanding-right">
+    <div class="section-outstanding-right col-sm-12 col-lg-8">
       <img src="../assets/img/logo/girl.jpg" alt="">
     </div>
   </div>
@@ -104,14 +103,14 @@
 <!-- section features -->
 <section class="section-outer">
   <div class="section-inner  section-features">
-    <div class="section-features-content">
+    <div class="section-features-content m-auto">
       <div class="section-features-header">
         <div class="section-features-header-title">Awesome Features</div>
         <div class="section-features-header-subtitle">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
           Atque, aperiam?</div>
       </div>
-      <div class="section-features-features">
-        <div class="section-features-features-item">
+      <div class="section-features-features row m-auto">
+        <div class="section-features-features-item col-sm-12 col-md-4 col-lg-4">
           <div class="section-features-features-item-icon">
             <img src="../assets/icons/icons8-ruler-64.png" alt="">
           </div>
@@ -122,7 +121,7 @@
             Accusamus, consectetur!</div>
           <div class="section-features-features-item-link">link</div>
         </div>
-        <div class="section-features-features-item">
+        <div class="section-features-features-item col-sm-12 col-md-4 col-lg-4">
           <div class="section-features-features-item-icon">
             <img src="../assets/icons/icons8-speed-24.png" alt="">
           </div>
@@ -133,7 +132,7 @@
             Non, eveniet.</div>
           <div class="section-features-features-item-link">link</div>
         </div>
-        <div class="section-features-features-item">
+        <div class="section-features-features-item col-sm-12 col-md-4 col-lg-4">
           <div class="section-features-features-item-icon">
             <img src="../assets/icons/icons8-online-support-64.png" alt="">
           </div>
@@ -159,13 +158,13 @@
 <!-- section screens -->
 <section class="section-outer ">
   <div class="section-inner section-screens">
-    <div class="section-screens-content">
-      <div class="section-screens-left">
+    <div class="section-screens-content row m-auto">
+      <div class="section-screens-left col-sm-12 col-md-6 col-lg-5">
         <div class="section-screens-left-img">
           <img src="../assets/img/New Project.png" alt="">
         </div>
       </div>
-      <div class="section-screens-right">
+      <div class="section-screens-right col-sm-12 col-md-6 col-lg-7">
         <div class="section-screens-right-content">
           <div class="section-screens-right-content-title">Features Screens</div>
           <div class="section-screens-right-content-subtitle">Lorem ipsum dolor sit amet consectetur
@@ -249,21 +248,20 @@
 
         </div>
       </div>
-      <!-- <div class="section-footer-content-two">
-        <div class="section-footer-content-two-logo">
-          <img src="../assets/img/wave.svg" alt="">
+      <div class="section-footer-content-two row">
+        <div class="section-footer-content-two-logo col-sm-12 col-md-3 col-lg-4">
           wavy
         </div>
-        <div class="section-footer-content-two-copyright">Copyright 2021 Wave App.
+        <div class="section-footer-content-two-copyright col-sm-12 col-md-6 col-lg-4">Copyright 2021 Wave App.
           All right reserved.
         </div>
-        <div class="section-footer-content-two-social">
+        <div class="section-footer-content-two-social col-sm-12 col-md-3 col-lg-4">
           <div class="section-footer-content-two-social-item">f</div>
           <div class="section-footer-content-two-social-item">y</div>
           <div class="section-footer-content-two-social-item">t</div>
           <div class="section-footer-content-two-social-item">i</div>
         </div>
-      </div> -->
+      </div>
     </div>
   </div>
 </section>
